fix videoplayer on iOS

--- a/src/components/pages/chat-bot/chat-bot.css
+++ b/src/components/pages/chat-bot/chat-bot.css
@@ -29,6 +29,30 @@
     height: 100%;
 }
 
+@media only screen and (max-width: 768px) {
+
+    .video-container {
+        position: relative;
+        height: 300px;
+        width: 100%;
+    }
+
+    iframe {
+        display: block;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        width: 100px;
+        min-width: 100%;
+        height: 100px;
+        min-height: 100%;
+    }
+}
+
+
+
 .home {
     height: 40px;
 }
